objects/Job_Detail__c.object
<CustomObject>
    <label>Job Detail</label>
    <nameField>
        <label>Job Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Travel__c</fullName>
        <label>Travel</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <label>Billable</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <precision>7</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Date__c</fullName>
        <label>Work Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>